initialisation du projet version 0.1

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1,3 +1,160 @@
+/* CSS personel du groupe*/
+
+/* Css AS */
+.blocs {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
+.bloc>h2 {
+	text-align: center;
+}
+
+.bloc {
+	background-color: rgba(100, 100, 100, 0.3);
+	border-radius: 30px;
+	border: solid;
+	margin: 1em;
+	padding: 1em;
+	box-shadow: 15px -15px rgba(130, 130, 130, 0.2);
+	text-align: justify;
+}
+
+#goUpBtn {
+	display: inline-block;
+	text-decoration: none;
+	font-size: 2rem;
+	line-height: 3rem;
+	text-align: center;
+	width: 3rem;
+	height: 3rem;
+	border-radius: 50%;
+	background-color: #D6E3F0;
+	z-index: 99;
+	cursor: pointer;
+}
+
+/* Smooth scrolling IF user doesn't have a preference due to motion sensitivities */
+@media screen and (prefers-reduced-motion: no-preference) {
+	html {
+		scroll-behavior: smooth;
+	}
+}
+/* your styles go here */
+/*debut CSS Laurent */
+.bloc {
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-size: 1.1em;
+	text-align: justify;
+	
+}
+.wrap_l {
+	display: flex !important;
+	align-items: center;
+  	justify-content: space-around;
+	flex-direction: row !important;
+  	background-color: rgb(41, 63, 50) !important;
+  	color: rgb(255, 255, 255) !important;
+  	border: 2px;
+	border-style: solid;
+	border-color: rgb(218,165,31);
+	margin: 10px;
+	padding: 5px;
+	-moz-border-radius:7px;
+	-webkit-border-radius:7px;
+	border-radius:7px;
+  	
+}
+/* le row reverse n'est la que pour garder le meme ordre d'insertion texte/img*/
+.wrap2_l {
+	display: flex !important;
+	align-items: center;
+  	justify-content: space-around;
+	flex-direction: row-reverse !important;
+  	background-color: rgb(2, 68, 64) !important;
+  	color: rgb(255, 255, 255) !important;
+  	border: 2px;
+	border-style: solid;
+	border-color: rgb(218,165,31);
+	margin: 10px;
+	padding: 5px;
+	-moz-border-radius:7px;
+	-webkit-border-radius:7px;
+	border-radius:7px;
+}
+.un_L {
+	display: flex;
+  	align-items: center;
+  	
+	margin: 5px;
+  	padding: 3px;
+}
+.deux_L {
+  	
+	margin: 5px;
+  	padding: 3px;
+  	
+}
+.trois_L {
+	
+	margin: 5px;
+  	padding: 3px;
+}
+.quatre_L {
+  
+	margin: 5px;
+  	padding: 3px;
+  	
+}
+
+.arrondi {
+	border-radius:7px;
+}
+.essai_L{
+	text-align: center;
+}
+.conclu_l{
+	display: flex ;
+	align-items: center;
+  	background-color: rgb(2, 68, 64) !important;
+  	color: rgb(255, 255, 255) !important;
+  	border: 2px;
+	border-style: solid;
+	border-color: rgb(218,165,31);
+	margin: 10px;
+	padding: 5px;
+	-moz-border-radius:7px;
+	-webkit-border-radius:7px;
+	border-radius:7px;
+	
+	
+}
+
+/*Ajout du redimensionnement des blocks en dessous de 800px (pour les petits écrans)*/
+@media screen and (max-width: 800px) {
+	.column_l_nrik, .column_r_nrik {
+		width: 100%;
+		padding: 0;
+	}
+}
+
+/*pour faire du responsive mais que sur les tout petits ecrans */
+@media screen and (max-width: 600px){
+    .deux_L{
+        display: none;
+    }
+    .quatre_L{
+    	display: none;
+    }
+}
+	
+/* css pour la page panier*/
+
+#overb.box{
+	background-color: white !important;
+}
+
 /* Début CSS perso Enrick */
 
 /* Header/Blog Titre */
@@ -112,11 +269,4 @@
 	clear: both;
 }
 
-/*Ajout du redimensionnement des blocks en dessous de 800px (pour les petits écrans)*/
-@media screen and (max-width: 800px) {
-	.column_l_nrik, .column_r_nrik {
-		width: 100%;
-		padding: 0;
-	}
-}
 /* Fin CSS perso Enrick */
